--- a/app/src/main/res/layout/fragment_team.xml
+++ b/app/src/main/res/layout/fragment_team.xml
@@ -3,7 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.Team">
+    tools:context=".fragments.about_us.Team">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/team"
+        android:layout_gravity="center"
+        android:textAlignment="center"
+        android:textSize="30sp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/team_upperrecycler"
