--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,7 @@
     <color name="es_bg_color">#55D8B7</color>
     <color name="associateSponsBlue">#010C54</color>
     <color name="black_overlay">#66000000</color>
+    <color name="bgBottomNavigation">#fe485a</color>
+    <color name="empty"> </color>
 
 </resources>
