--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -25,23 +25,23 @@
         android:background="@color/transparent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="match_parent"
-            app:srcCompat="@drawable/ic_back"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp"/>
+        <!--<ImageView-->
+            <!--android:layout_width="70dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--app:srcCompat="@drawable/ic_back"-->
+            <!--android:paddingStart="20dp"-->
+            <!--android:paddingEnd="20dp"/>-->
 
         <TextView
             android:id="@+id/about_us_toolbar_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="35sp"
             android:gravity="center"
+            android:text="@string/about_us"
             android:textColor="@color/colorWhite"
-            android:padding="5dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/about_us_coord_layout"/>
+            android:textSize="35sp"
+            app:layout_constraintBottom_toTopOf="@id/about_us_coord_layout"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </LinearLayout>
 
