--- a/app/src/main/res/layout/layout_card_team.xml
+++ b/app/src/main/res/layout/layout_card_team.xml
@@ -1,31 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="15dp">
+
     <LinearLayout
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:background="@color/colorWhite"
-        android:alpha="0.4"
+        android:alpha="0.2"
         android:orientation="vertical">
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:alpha="0.4" />
-        <ImageView
-            android:id="@+id/memberpic"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"/>
+            android:layout_height="40dp"/>
+
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:alpha="0.4"/>
+            android:layout_marginTop="250dp"/>
+
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:background="@color/colorWhite"
-        android:alpha="0.4"
         android:orientation="vertical">
         <TextView
             android:id="@+id/memberpost"
@@ -36,17 +37,24 @@
             android:layout_margin="5dp"
             android:textColor="@color/colorLightBlack"
             android:layout_gravity="center"/>
+
+        <ImageView
+        android:id="@+id/memberpic"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"/>
+
         <TextView
             android:id="@+id/membername"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="22sp"
+            android:maxLines="1"
             android:text="@string/name"
-            android:layout_marginTop="255dp"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:textColor="@color/colorLightBlack"
             android:layout_gravity="center"/>
     </LinearLayout>
-
 
 </RelativeLayout>
