--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -153,7 +153,7 @@
         android:layout_height="40dp"
         android:layout_marginStart="60dp"
         android:layout_marginTop="10dp"
-        android:src="@drawable/ic_google"
+        app:srcCompat="@drawable/ic_google"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline3" />
 
@@ -164,7 +164,7 @@
         android:layout_marginStart="80dp"
         android:layout_marginTop="75dp"
         android:layout_marginEnd="130dp"
-        android:src="@drawable/ic_facebook"
+        app:srcCompat="@drawable/ic_facebook"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/google_button"
         app:layout_constraintTop_toTopOf="@+id/guideline3" />
