--- a/app/src/main/res/layout/fragment_team.xml
+++ b/app/src/main/res/layout/fragment_team.xml
@@ -5,17 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".fragments.about_us.Team">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/team"
-        android:layout_gravity="center"
-        android:textAlignment="center"
-        android:textSize="30sp"/>
-
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/team_upperrecycler"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:id="@+id/team_recycler"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        />
 
 </FrameLayout>
