--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/aim_background"
+        android:src="@drawable/about_us_background"
         android:rotation="45"
         android:layout_marginStart="-400dp"
         android:layout_marginEnd="-400dp"
